@@ -41,13 +41,13 @@
 
 #include "area.h"
 #include "asm.h"
+#include "common.h"
 #include "error.h"
 #include "filestack.h"
 #include "include.h"
 #include "input.h"
 #include "main.h"
 #include "local.h"
-#include "os.h"
 #include "output.h"
 #include "symbol.h"
 #include "targetcpu.h"
